--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,13 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
+  - "3.6"
 
 env:
   - DJANGO='django>=1.8,<1.9'
   - DJANGO='django>=1.9,<1.10'
   - DJANGO='django>=1.10,<1.11'
+  - DJANGO='django>=2.0,<2.1'
   - DJANGO='https://github.com/django/django/archive/master.tar.gz'
 
 install:
